--- a/project/src/main/resources/views/list_reservations.fxml
+++ b/project/src/main/resources/views/list_reservations.fxml
@@ -1,20 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.controllers.ListReservationController">
-    <children>
-        <TableView fx:id="reservationsTableView" prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.text.Font?>
+<BorderPane fx:id="rootPane" prefHeight="400.0" prefWidth="800.0" styleClass="root" stylesheets="@../styles/styleback.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.controllers.ListReservationController">
+    <top>
+        <VBox alignment="CENTER" spacing="10.0" styleClass="top-section" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
+            <children>
+                <Label styleClass="top-label" text="Liste des Réservations">
+                    <font>
+                        <Font size="24.0" />
+                    </font>
+                </Label>
+                <VBox spacing="10.0">
+                    <children>
+                        <HBox alignment="CENTER" spacing="10.0">
+                            <children>
+                                <TextField fx:id="searchInput" prefWidth="300.0" promptText="Rechercher une reservation..."  style="-fx-background-color: white;" styleClass="search-input"/>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="10.0">
+                            <children>
+                                <Button fx:id="sortNewest" onAction="#sortReservationsByNewest" styleClass="sort-button" text="Les plus récentes" />
+                                <Button fx:id="sortOldest" onAction="#sortReservationsByOldest" styleClass="sort-button" text="Les plus anciennes" />
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
+    </top>
+    <center>
+        <TableView fx:id="reservationsTableView" styleClass="reservations-table" BorderPane.alignment="CENTER">
             <columns>
-                <TableColumn fx:id="idColumn" prefWidth="50.0" text="ID" />
-                <TableColumn fx:id="rehlaIdColumn" prefWidth="80.0" text="Rehla ID" />
-                <TableColumn fx:id="userNameColumn" prefWidth="120.0" text="User Name" />
-                <TableColumn fx:id="emailColumn" prefWidth="150.0" text="Email" />
-                <TableColumn fx:id="contactColumn" prefWidth="100.0" text="Contact" />
-                <TableColumn fx:id="userIdColumn" prefWidth="100.0" text="User ID" />
+                <TableColumn fx:id="idColumn" text="ID" />
+                <TableColumn fx:id="userNameColumn" text="Utilisateur" />
+                <TableColumn fx:id="emailColumn" text="Email" />
+                <TableColumn fx:id="contactColumn" text="Contact" />
+                <TableColumn fx:id="departColumn" text="Départ" />
+                <TableColumn fx:id="destinationColumn" text="Destination" />
+                <TableColumn fx:id="priceColumn" text="Prix (€)" />
+                <TableColumn fx:id="agenceColumn" text="Agence" />
+                <TableColumn fx:id="actionColumn" text="Action" />
             </columns>
+            <placeholder>
+                <Label styleClass="no-reservations" text="Aucune réservation trouvée." />
+            </placeholder>
         </TableView>
-    </children>
-</AnchorPane>
+    </center>
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
+</BorderPane>
