--- a/project/src/main/resources/views/ListRehla.fxml
+++ b/project/src/main/resources/views/ListRehla.fxml
@@ -5,7 +5,49 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.text.Font?>
+<?import javafx.fxml.FXMLLoader?>
 <BorderPane fx:id="rootPane" prefHeight="600.0" prefWidth="800.0" styleClass="root" stylesheets="@../styles/styleback.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.controllers.ListRehlaController">
+    <left>
+        <VBox spacing="10.0" styleClass="side-panel" prefWidth="200.0">
+            <padding>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+            </padding>
+            <children>
+                <Label styleClass="section-header" text="Filtres de Recherche" alignment="CENTER" maxWidth="Infinity" />
+                <Button mnemonicParsing="false" onAction="#resetFilters" text="Réinitialiser les filtres" maxWidth="Infinity" styleClass="action-button" />
+                <VBox spacing="5.0">
+                    <Label styleClass="filter-label" text="Départ" />
+                    <TextField fx:id="departInput" promptText="Rechercher un départ..." styleClass="search-input" maxWidth="Infinity"/>
+                </VBox>
+                <VBox spacing="5.0">
+                    <Label styleClass="filter-label" text="Destination" />
+                    <TextField fx:id="searchInput" promptText="Rechercher une destination..." styleClass="search-input" maxWidth="Infinity"/>
+                </VBox>
+                <Label styleClass="section-header" text="Filtrer par prix" />
+                <HBox spacing="5.0" alignment="CENTER_LEFT">
+                    <Label text="Min:" />
+                    <Label fx:id="minPriceLabel" text="0 €" />
+                </HBox>
+                <Slider fx:id="minPriceRange" min="0" max="2000" value="0" blockIncrement="10" styleClass="price-slider" maxWidth="Infinity"/>
+                <HBox spacing="5.0" alignment="CENTER_LEFT">
+                    <Label text="Max:" />
+                    <Label fx:id="maxPriceLabel" text="2000 €" />
+                </HBox>
+                <Slider fx:id="maxPriceRange" min="0" max="2000" value="2000" blockIncrement="10" styleClass="price-slider" maxWidth="Infinity"/>
+                <Label styleClass="section-header" text="Filtrer par date" />
+                <VBox spacing="5.0">
+                    <Label styleClass="filter-label" text="Date de départ" />
+                    <DatePicker fx:id="departDateInput" styleClass="date-picker" maxWidth="Infinity"/>
+                </VBox>
+                <VBox spacing="5.0">
+                    <Label styleClass="filter-label" text="Date d'arrivée" />
+                    <DatePicker fx:id="arrivalDateInput" styleClass="date-picker" maxWidth="Infinity"/>
+                </VBox>
+                <Label styleClass="section-header" text="Filtrer par agence" />
+                <VBox fx:id="agenceFilterVBox" spacing="5.0" />
+            </children>
+        </VBox>
+    </left>
     <top>
         <VBox alignment="CENTER" spacing="10.0" styleClass="top-section" BorderPane.alignment="CENTER">
             <padding>
@@ -17,7 +59,6 @@
                         <Font size="24.0" />
                     </font>
                 </Label>
-
                 <VBox spacing="10.0">
                     <children>
                         <HBox alignment="CENTER" spacing="10.0">
@@ -31,25 +72,24 @@
         </VBox>
     </top>
     <center>
-        <VBox spacing="20" alignment="TOP_CENTER" styleClass="main-content" style="-fx-padding: 20px;">
-            <TableView fx:id="rehlaTable" prefHeight="400" styleClass="table-view">
+        <VBox spacing="20.0" alignment="TOP_CENTER" styleClass="main-content" style="-fx-padding: 20px;">
+            <TableView fx:id="rehlaTable" prefHeight="400.0" styleClass="table-view">
                 <columns>
-                    <TableColumn fx:id="idColumn" text="ID" prefWidth="50"/>
-                    <TableColumn fx:id="agenceColumn" text="Agence" prefWidth="100"/>
-                    <TableColumn fx:id="departColumn" text="Départ" prefWidth="120"/>
-                    <TableColumn fx:id="destinationColumn" text="Destination" prefWidth="120"/>
-                    <TableColumn fx:id="departDateColumn" text="Date Départ" prefWidth="120"/>
-                    <TableColumn fx:id="arrivalDateColumn" text="Date Arrivée" prefWidth="120"/>
-                    <TableColumn fx:id="priceColumn" text="Prix" prefWidth="80"/>
-                    <TableColumn fx:id="actionColumn" text="Actions" prefWidth="200"/>
+                    <TableColumn fx:id="idColumn" text="ID" prefWidth="50.0"/>
+                    <TableColumn fx:id="agenceColumn" text="Agence" prefWidth="100.0"/>
+                    <TableColumn fx:id="departColumn" text="Départ" prefWidth="120.0"/>
+                    <TableColumn fx:id="destinationColumn" text="Destination" prefWidth="120.0"/>
+                    <TableColumn fx:id="departDateColumn" text="Date Départ" prefWidth="120.0"/>
+                    <TableColumn fx:id="arrivalDateColumn" text="Date Arrivée" prefWidth="120.0"/>
+                    <TableColumn fx:id="priceColumn" text="Prix" prefWidth="80.0"/>
+                    <TableColumn fx:id="actionColumn" text="Actions" prefWidth="200.0"/>
                 </columns>
             </TableView>
-
-            <HBox spacing="10" alignment="CENTER_RIGHT">
+            <HBox spacing="10.0" alignment="CENTER_RIGHT">
                 <Button text="Nouveau Vol" onAction="#handleAddRehla" styleClass="button"/>
-                <Button text="Modifier Vol" onAction="#handleUpdateRehla" styleClass="button"/>
-                <Button text="Supprimer Vol" onAction="#handleDeleteSelectedRehla" styleClass="button"/>
-                <Button text="Afficher Détails" onAction="#handleShowSelectedRehlaDetails" styleClass="button"/>
+                <Button text="Modifier Vol" onAction="#handleUpdateSelectedRehla" styleClass="button"/>
+                <Button text="Supprimer Vol" onAction="#handleDeleteSelectedRehlaFromButton" styleClass="button"/>
+                <Button text="Afficher Détails" onAction="#handleShowSelectedRehlaDetailsFromButton" styleClass="button"/>
             </HBox>
         </VBox>
     </center>
