--- a/project/src/main/resources/views/amineviews/ListAirlines.fxml
+++ b/project/src/main/resources/views/amineviews/ListAirlines.fxml
@@ -6,10 +6,8 @@
 
 <?import javafx.scene.text.Font?>
 <?import javafx.fxml.FXMLLoader?>
-<BorderPane fx:id="rootPane" prefHeight="600.0" prefWidth="800.0" styleClass="root" stylesheets="@../styles/styleback.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.controllers.ListAirlinesController">
-    <left>
-        <fx:include fx:id="sidebar" source="sidebar.fxml" />
-    </left>
+<BorderPane fx:id="rootPane" prefHeight="600.0" prefWidth="800.0" styleClass="root" stylesheets="@../../styles/styleamine.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.controllers.ListAirlinesController">
+
     <top>
         <VBox alignment="CENTER" spacing="10.0" styleClass="top-section" BorderPane.alignment="CENTER">
             <padding>
